--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,4 +16,9 @@
     </activity>
     
   </application>
+
+  <!-- Permissions -->
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 </manifest> 
