--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,8 @@
                android:icon="@drawable/ic_launcher">
     
     <activity android:name="Guide"
-              android:label="@string/app_name">
+              android:label="@string/app_name"
+              android:configChanges="keyboardHidden|orientation">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
